--- a/bio.html
+++ b/bio.html
@@ -48,8 +48,8 @@
           <iframe
             width="560"
             height="315"
-            src="https://www.youtube.com/embed/OPhDS_s1TEM"
-            title="YouTube video player"
+            src="https://www.youtube.com/embed/4DdSyoAvaCE"
+            title="Portfolio video"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
